--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,5 @@
 CMAKE_MINIMUM_REQUIRED (VERSION 2.8)
 
-add_executable (tinyFEM explicit.cpp)
+# add_executable (tinyFEM explicit.cpp)
+
+add_executable (1el_2d_sig_dev_pe 1el_2d_sig_dev_pe.c)
